; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcdsp_msa.c_hevc_hz_4t_4x4_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcdsp_msa.c_hevc_hz_4t_4x4_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ff_hevc_mask_arr = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*)* @hevc_hz_4t_4x4_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hz_4t_4x4_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i64, align 8
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %25 = load i64, i64* @ff_hevc_mask_arr, align 8
  %26 = add nsw i64 %25, 16
  %27 = call i64 @LD_SB(i64 %26)
  store i64 %27, i64* %24, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 -1
  store i32* %29, i32** %6, align 8
  %30 = load i32*, i32** %10, align 8
  %31 = call i32 @LD_SH(i32* %30)
  store i32 %31, i32* %22, align 4
  %32 = load i32, i32* %22, align 4
  %33 = load i32, i32* %11, align 4
  %34 = load i32, i32* %12, align 4
  %35 = call i32 @SPLATI_H2_SH(i32 %32, i32 0, i32 1, i32 %33, i32 %34)
  %36 = load i64, i64* %24, align 8
  %37 = add nsw i64 %36, 2
  store i64 %37, i64* %17, align 8
  %38 = call i32 @__msa_ldi_h(i32 128)
  store i32 %38, i32* %23, align 4
  %39 = load i32, i32* %23, align 4
  %40 = shl i32 %39, 6
  store i32 %40, i32* %23, align 4
  %41 = load i32*, i32** %6, align 8
  %42 = load i32, i32* %7, align 4
  %43 = load i64, i64* %13, align 8
  %44 = load i64, i64* %14, align 8
  %45 = load i64, i64* %15, align 8
  %46 = load i64, i64* %16, align 8
  %47 = call i32 @LD_SB4(i32* %41, i32 %42, i64 %43, i64 %44, i64 %45, i64 %46)
  %48 = load i64, i64* %13, align 8
  %49 = load i64, i64* %14, align 8
  %50 = load i64, i64* %15, align 8
  %51 = load i64, i64* %16, align 8
  %52 = call i32 @XORI_B4_128_SB(i64 %48, i64 %49, i64 %50, i64 %51)
  %53 = load i64, i64* %13, align 8
  %54 = load i64, i64* %14, align 8
  %55 = load i64, i64* %13, align 8
  %56 = load i64, i64* %14, align 8
  %57 = load i64, i64* %24, align 8
  %58 = load i64, i64* %17, align 8
  %59 = load i64, i64* %18, align 8
  %60 = load i64, i64* %19, align 8
  %61 = call i32 @VSHF_B2_SB(i64 %53, i64 %54, i64 %55, i64 %56, i64 %57, i64 %58, i64 %59, i64 %60)
  %62 = load i32, i32* %23, align 4
  store i32 %62, i32* %20, align 4
  %63 = load i64, i64* %18, align 8
  %64 = load i64, i64* %19, align 8
  %65 = load i32, i32* %11, align 4
  %66 = load i32, i32* %12, align 4
  %67 = load i32, i32* %20, align 4
  %68 = load i32, i32* %20, align 4
  %69 = call i32 @DPADD_SB2_SH(i64 %63, i64 %64, i32 %65, i32 %66, i32 %67, i32 %68)
  %70 = load i64, i64* %15, align 8
  %71 = load i64, i64* %16, align 8
  %72 = load i64, i64* %15, align 8
  %73 = load i64, i64* %16, align 8
  %74 = load i64, i64* %24, align 8
  %75 = load i64, i64* %17, align 8
  %76 = load i64, i64* %18, align 8
  %77 = load i64, i64* %19, align 8
  %78 = call i32 @VSHF_B2_SB(i64 %70, i64 %71, i64 %72, i64 %73, i64 %74, i64 %75, i64 %76, i64 %77)
  %79 = load i32, i32* %23, align 4
  store i32 %79, i32* %21, align 4
  %80 = load i64, i64* %18, align 8
  %81 = load i64, i64* %19, align 8
  %82 = load i32, i32* %11, align 4
  %83 = load i32, i32* %12, align 4
  %84 = load i32, i32* %21, align 4
  %85 = load i32, i32* %21, align 4
  %86 = call i32 @DPADD_SB2_SH(i64 %80, i64 %81, i32 %82, i32 %83, i32 %84, i32 %85)
  %87 = load i32, i32* %20, align 4
  %88 = load i32, i32* %21, align 4
  %89 = load i32*, i32** %8, align 8
  %90 = load i32, i32* %9, align 4
  %91 = call i32 @ST_D4(i32 %87, i32 %88, i32 0, i32 1, i32 0, i32 1, i32* %89, i32 %90)
  ret void
}

declare dso_local i64 @LD_SB(i64) #1

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H2_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @__msa_ldi_h(i32) #1

declare dso_local i32 @LD_SB4(i32*, i32, i64, i64, i64, i64) #1

declare dso_local i32 @XORI_B4_128_SB(i64, i64, i64, i64) #1

declare dso_local i32 @VSHF_B2_SB(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @DPADD_SB2_SH(i64, i64, i32, i32, i32, i32) #1

declare dso_local i32 @ST_D4(i32, i32, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
